DEL
[d] Remove not necessary Parser class

[d] add FilesystemUtil.getPluginDir for getting real plugin path by plugin id

[d] split LuaLibDownloader on domain service and application service

[d] remove not necessary tags logic from LuaLibDownloader

[d] add test LuaLibDownloaderTest

[d] split PrototypeParser on domain service and application service

[d] add test for PrototypeParser

[d] move Property and SubPrototype classes in Prototype

[d] split ApiParser on domain service and application service

[d] FactorioApiVersion -> FactorioVersion

[d] LuaLibDownloader -> LuaLibParser

[d] intellij.library.service -> intellij.service

[d] use one notification error message per parser

[d] remove not necessary CoreException

[d] FilesystemUtil -> FileUtil

[d] move NotificationService in intellij package

[d] use method removeLibraryFiles in all library services

[d] Change collection factory

[d] increase timeout for Jsoup.connect

[d] LuaLibParser -> FactorioDataParser

[d] LuaLibService -> FactorioDataService