@@ -15,17 +15,16 @@ import com.intellij.util.PathUtil;
 import com.intellij.util.io.URLUtil;
 import com.tang.intellij.lua.lang.LuaIcons;
 import com.tang.intellij.lua.psi.LuaFileUtil;
-import moe.knox.factorio.core.parser.api.ApiParser;
-import moe.knox.factorio.core.parser.prototype.PrototypeParser;
+import moe.knox.factorio.intellij.service.ApiService;
+import moe.knox.factorio.intellij.service.PrototypeService;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import javax.swing.*;
 import java.io.File;
 import java.net.MalformedURLException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
+import java.nio.file.Path;
+import java.util.*;
 
 public class FactorioLibraryProvider extends AdditionalLibraryRootsProvider {
     @NotNull
@@ -33,7 +32,7 @@ public class FactorioLibraryProvider extends AdditionalLibraryRootsProvider {
     public Collection<SyntheticLibrary> getAdditionalProjectLibraries(@NotNull Project project) {
         // Do nothing, if integration is deactivated
         if (!FactorioState.getInstance(project).integrationActive) {
-            return Arrays.asList();
+            return List.of();
         }
 
         String jarPath = PathUtil.getJarPathForClass(FactorioLibraryProvider.class);
@@ -55,15 +54,15 @@ public class FactorioLibraryProvider extends AdditionalLibraryRootsProvider {
 
         // libDir for downloaded factorio api
         VirtualFile dynDir = null;
-        String downloadedApiDir = ApiParser.getCurrentApiLink(project);
-        if (downloadedApiDir != null && !downloadedApiDir.isEmpty()) {
-            libList.add(createLibrary(downloadedApiDir, "Factorio API"));
+        Path apiPath = ApiService.getInstance(project).getApiPath();
+        if (apiPath != null) {
+            libList.add(createLibrary(apiPath.toString(), "Factorio API"));
         }
 
         // protoDir for downloaded factorio prototypes
-        String downloadedProtoDir = PrototypeParser.getCurrentPrototypeLink(project);
-        if (downloadedProtoDir != null && !downloadedProtoDir.isEmpty()) {
-            libList.add(createLibrary(downloadedProtoDir, "Factorio Prototypes"));
+        Path downloadedProtoDir = PrototypeService.getInstance(project).getPrototypePath();
+        if (downloadedProtoDir != null) {
+            libList.add(createLibrary(downloadedProtoDir.toString(), "Factorio Prototypes"));
         }
 
         // corePrototypes "core" dir
@@ -120,7 +119,7 @@ public class FactorioLibraryProvider extends AdditionalLibraryRootsProvider {
         @NotNull
         @Override
         public Collection<VirtualFile> getSourceRoots() {
-            return Arrays.asList(root);
+            return Collections.singletonList(root);
         }
 
         @Nullable
